--- a/app/src/main/res/layout/activity_photo_list.xml
+++ b/app/src/main/res/layout/activity_photo_list.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         android:drawSelectorOnTop="false"/>
 
-    <TextView android:id="@android:id/list"
+    <TextView android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="No data"/>
